fixed spacing issues on desktop

--- a/styles/style.css
+++ b/styles/style.css
@@ -149,6 +149,7 @@ section img {
 
 .contact p {
     text-align: center;
+    line-height: 1.5;
 }
 
 .contact a {
@@ -313,7 +314,6 @@ header p {
      }
 
      .student-profile p {
-        width: 85%;
         font-size: 20px;
      }
 
@@ -333,11 +333,15 @@ header p {
 
      h2 {
         margin-top: 4rem;
-        margin-bottom: 5rem;
+        margin-bottom: 4rem;
      }
 
      footer {
         padding-bottom: 0;
+     }
+
+     .contact p {
+        width: 52%;
      }
 
  
